--- a/src/content/author.yaml
+++ b/src/content/author.yaml
@@ -17,7 +17,7 @@
   location: Bursa
   profile_image: img/author/ryan-pernofski-1380833-unsplash.jpg
 - id: Zeliha Özata
-  avatar: avatars/zeliha_ozata.jpg
+  avatar: avatars/zeliha_ozata3.jpg
   bio: Uzman Psikolog
   twitter: OzataZeliha
   facebook: psikologzelihaozata/
