--- a/package.json
+++ b/package.json
@@ -1,98 +1,81 @@
 {
   "name": "rozet-danismanlik",
   "description": "Özel Rozet Aile Danışma Merkezi",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "private": true,
   "author": "Tahsin Kocaman <https://github.com/t5k6>",
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "clean": "rimraf public",
     "dev": "gatsby develop",
-    "lint": "eslint src/**/*.tsx src/**/*.ts",
-    "lint:fix": "eslint --fix src/**/*.tsx src/**/*.ts",
+    "lint": "eslint --ext .js,.ts,.tsx .",
+    "lint:fix": "eslint --fix --ext .js,.ts,.tsx .",
     "start": "npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.27",
-    "@emotion/styled": "^10.0.27",
-    "@emotion/styled-base": "10.0.27",
-    "@mdx-js/mdx": "^1.0.20",
-    "@mdx-js/react": "^1.0.20",
-    "classnames": "^2.2.6",
-    "emotion": "^10.0.14",
-    "emotion-server": "^10.0.14",
-    "gatsby": "^2.19.17",
-    "gatsby-image": "^2.2.41",
-    "gatsby-plugin-advanced-sitemap": "^1.0.3",
-    "gatsby-plugin-canonical-urls": "^2.1.20",
-    "gatsby-plugin-emotion": "^4.1.22",
-    "gatsby-plugin-feed": "^2.3.27",
-    "gatsby-plugin-google-analytics": "^2.1.35",
-    "gatsby-plugin-manifest": "^2.0.24",
-    "gatsby-plugin-offline": "^3.0.34",
-    "gatsby-plugin-postcss": "^2.1.20",
-    "gatsby-plugin-react-helmet": "^3.1.22",
-    "gatsby-plugin-sharp": "^2.4.5",
-    "gatsby-plugin-typescript": "2.1.27",
-    "gatsby-remark-abbr": "^2.0.0",
-    "gatsby-remark-copy-linked-files": "^2.1.37",
-    "gatsby-remark-images": "^3.1.44",
-    "gatsby-remark-prismjs": "^3.3.31",
-    "gatsby-remark-responsive-iframe": "^2.2.32",
-    "gatsby-remark-smartypants": "^2.1.21",
-    "gatsby-source-filesystem": "^2.1.48",
-    "gatsby-transformer-json": "^2.2.26",
-    "gatsby-transformer-remark": "^2.6.51",
-    "gatsby-transformer-sharp": "^2.3.14",
-    "gatsby-transformer-yaml": "^2.2.25",
-    "lodash": "^4.17.15",
-    "modern-normalize": "^0.6.0",
-    "normalize.css": "^8.0.1",
-    "polished": "^3.4.4",
-    "postcss-color-function": "^4.1.0",
-    "prism-themes": "^1.3.0",
-    "prismjs": "^1.19.0",
-    "react": "^16.13.1",
-    "react-accessible-accordion": "^3.0.1",
-    "react-dom": "^16.12.0",
-    "react-emotion": "^10.0.0",
-    "react-helmet": "^5.2.1",
-    "react-responsive-carousel": "^3.1.47",
-    "react-typist": "^2.0.5",
-    "rehype-react": "^4.0.1"
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "gatsby": "^5.11.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@mdx-js/tag": "^0.20.3",
-    "@types/classnames": "^2.2.9",
-    "@types/lodash": "^4.14.149",
-    "@types/node": "^13.7.1",
-    "@types/react": "^16.9.19",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-helmet": "^5.0.8",
-    "@typescript-eslint/eslint-plugin": "^2.19.2",
-    "@typescript-eslint/parser": "2.19.2",
-    "babel-plugin-styled-components": "^1.10.7",
-    "cssnano": "^4.1.10",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-config-xo-react": "^0.23.0",
-    "eslint-config-xo-space": "^0.24.0",
-    "eslint-config-xo-typescript": "^0.26.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-react": "^7.18.3",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "gatsby-mdx": "^1.0.0",
-    "prettier": "^1.16.4",
-    "rimraf": "^2.6.3",
-    "tslint": "^6.0.0",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.1.0",
-    "tslint-xo": "^0.16.0",
-    "typescript": "^3.7.5"
+    "@types/lodash-es": "4.17.7",
+    "@types/node": "20.3.1",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
+    "cssnano": "6.0.1",
+    "date-fns": "2.30.0",
+    "emotion": "11.0.0",
+    "emotion-server": "11.0.0",
+    "eslint": "8.43.0",
+    "eslint-config-xo-react": "0.27.0",
+    "eslint-config-xo-space": "0.34.0",
+    "eslint-config-xo-typescript": "0.57.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "gatsby-plugin-canonical-urls": "^5.11.0",
+    "gatsby-plugin-emotion": "^8.11.0",
+    "gatsby-plugin-feed": "^5.11.0",
+    "gatsby-plugin-google-analytics": "^5.11.0",
+    "gatsby-plugin-image": "^3.11.0",
+    "gatsby-plugin-postcss": "^6.11.0",
+    "gatsby-plugin-sharp": "^5.11.0",
+    "gatsby-plugin-sitemap": "^6.11.0",
+    "gatsby-plugin-typescript": "^5.11.0",
+    "gatsby-remark-copy-linked-files": "^6.11.0",
+    "gatsby-remark-images": "^7.11.00",
+    "gatsby-remark-prismjs": "^7.11.0",
+    "gatsby-remark-responsive-iframe": "6.10.0",
+    "gatsby-remark-smartypants": "^6.11.0",
+    "gatsby-source-filesystem": "^5.11.0",
+    "gatsby-transformer-json": "^5.11.0",
+    "gatsby-transformer-remark": "^6.11.0",
+    "gatsby-transformer-sharp": "^5.11.0",
+    "gatsby-transformer-yaml": "^5.11.0",
+    "lodash-es": "4.17.21",
+    "normalize.css": "8.0.1",
+    "polished": "4.2.2",
+    "postcss-color-function": "4.1.0",
+    "prism-themes": "1.9.0",
+    "prismjs": "1.29.0",
+    "react-emotion": "10.0.0",
+    "reading-time": "1.5.0",
+    "rehype-react": "7.2.0",
+    "typescript": "5.1.3"
   },
+  "browserslist": [
+    ">5%",
+    "not dead"
+  ],
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=18.12.0"
+  },
+  "volta": {
+    "node": "18.12.0"
   }
 }
