--- a/src/content/author.yaml
+++ b/src/content/author.yaml
@@ -1,11 +1,11 @@
 - name: Rozet
-  avatar: avatars/fav.png
-  bio: Özel Rozet Aile Danışma Merkezi
+  avatar: avatars/logo_circle.png
+  bio: Aile Danışma Merkezi
   twitter: rozet_dan
   facebook: pg/rozetdanismanlik/
   instagram: rozetdanismanlik/
   website: https://rozetdanismanlik.com
-  location: Altınşehir Mahallesi 205. Sokak No:38/1 Nilüfer Bursa
+  location: Yüzüncüyıl, Arkat Plaza Bursa, İzmir Yolu Cd 12. Blok A, No 3, 16120 Nilüfer/Bursa
   profile_image: img/author/IMG_5993.jpg
 - name: Gökçin Çaylar
   avatar: avatars/gokcin_caylar.jpg
