--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "gatsby": "^5.11.0",
+    "gatsby-plugin-manifest": "^5.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/lodash-es": "4.17.7",
     "@types/node": "20.3.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
@@ -29,8 +29,6 @@
     "@typescript-eslint/parser": "^5.60.0",
     "cssnano": "6.0.1",
     "date-fns": "2.30.0",
-    "emotion": "11.0.0",
-    "emotion-server": "11.0.0",
     "eslint": "8.43.0",
     "eslint-config-xo-react": "0.27.0",
     "eslint-config-xo-space": "0.34.0",
@@ -47,23 +45,16 @@
     "gatsby-plugin-sharp": "^5.11.0",
     "gatsby-plugin-sitemap": "^6.11.0",
     "gatsby-plugin-typescript": "^5.11.0",
-    "gatsby-remark-copy-linked-files": "^6.11.0",
-    "gatsby-remark-images": "^7.11.00",
-    "gatsby-remark-prismjs": "^7.11.0",
-    "gatsby-remark-responsive-iframe": "6.10.0",
-    "gatsby-remark-smartypants": "^6.11.0",
     "gatsby-source-filesystem": "^5.11.0",
     "gatsby-transformer-json": "^5.11.0",
     "gatsby-transformer-remark": "^6.11.0",
     "gatsby-transformer-sharp": "^5.11.0",
     "gatsby-transformer-yaml": "^5.11.0",
-    "lodash-es": "4.17.21",
     "normalize.css": "8.0.1",
     "polished": "4.2.2",
     "postcss-color-function": "4.1.0",
     "prism-themes": "1.9.0",
     "prismjs": "1.29.0",
-    "react-emotion": "10.0.0",
     "reading-time": "1.5.0",
     "rehype-react": "7.2.0",
     "typescript": "5.1.3"
