--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "build": "gatsby build",
     "dev": "gatsby develop",
-    "lint": "eslint --ext .js,.ts,.tsx .",
-    "lint:fix": "eslint --fix --ext .js,.ts,.tsx .",
+    "lint": "rome check . --apply-suggested",
+    "lint:fix": "rome format . --write",
     "start": "npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,20 +22,11 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "20.3.1",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0",
+    "@types/node": "^20.4.2",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
     "cssnano": "6.0.1",
     "date-fns": "2.30.0",
-    "eslint": "8.43.0",
-    "eslint-config-xo-react": "0.27.0",
-    "eslint-config-xo-space": "0.34.0",
-    "eslint-config-xo-typescript": "0.57.0",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-react": "7.32.2",
-    "eslint-plugin-react-hooks": "4.6.0",
     "gatsby-plugin-canonical-urls": "^5.11.0",
     "gatsby-plugin-emotion": "^8.11.0",
     "gatsby-plugin-feed": "^5.11.0",
@@ -57,7 +48,8 @@
     "prismjs": "1.29.0",
     "reading-time": "1.5.0",
     "rehype-react": "7.2.0",
-    "typescript": "5.1.3"
+    "rome": "^12.1.3",
+    "typescript": "5.1.6"
   },
   "browserslist": [
     ">5%",
