fixes for responsive view

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rozet-danismanlik",
-  "description": "Özel Rozet Aile Danışma Merkezi",
+  "description": "Rozet Danışmanlık",
   "version": "0.0.5",
   "private": true,
   "author": "Tahsin Kocaman <https://github.com/t5k6>",
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "gatsby build",
     "dev": "gatsby develop",
-    "lint": "rome check . --apply-suggested",
+    "lint": "rome check . --apply",
     "lint:fix": "rome format . --write",
     "start": "npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,7 +22,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^20.4.2",
+    "@types/node": "^20.5.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "cssnano": "6.0.1",
@@ -44,8 +44,6 @@
     "normalize.css": "8.0.1",
     "polished": "4.2.2",
     "postcss-color-function": "4.1.0",
-    "prism-themes": "1.9.0",
-    "prismjs": "1.29.0",
     "reading-time": "1.5.0",
     "rehype-react": "7.2.0",
     "rome": "^12.1.3",
